# lumen-xarray

./: .gitignore  README.md  pyproject.toml
examples/: create_custom_dataset.py  dashboard.py  lumen_pipeline.py  quickstart.py  sql_queries.py
lumen_xarray/: __init__.py  _base.py  ai.py  basic_source.py  source.py  transforms.py
tests/: conftest.py  test_ai_integration.py  test_basic_source.py  test_sql_source.py  test_transforms.py
